WIP DBScan Improvements

--- a/browser/components/textrecognition/tests/browser/browser.ini
+++ b/browser/components/textrecognition/tests/browser/browser.ini
@@ -2,9 +2,12 @@
 support-files =
   head.js
   image.png
+  dbscan.html
   !/toolkit/content/tests/browser/doggy.png
 
 [browser_textrecognition.js]
 run-if = os == "mac" # Mac only feature.
 [browser_textrecognition_no_result.js]
+run-if = os == "mac" # Mac only feature.
+[browser_textrecognition_dbscan.js]
 run-if = os == "mac" # Mac only feature.
